--- a/package.json
+++ b/package.json
@@ -27,5 +27,8 @@
     "@aws-sdk/shared-ini-file-loader": "0.1.0-preview.1",
     "open": "^7.1.0",
     "sha1": "^1.1.1"
+  },
+  "publishConfig": {
+    "access": "public"
   }
 }
