--- a/package.json
+++ b/package.json
@@ -1,10 +1,11 @@
 {
   "name": "@mhlabs/aws-sdk-sso",
-  "version": "0.0.12",
+  "version": "0.0.13",
   "description": "Credentials provider for AWS Single Sign-On",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "build": "npm exec tsc",
+    "test": "npx jest --silent"
   },
   "repository": {
     "type": "git",
@@ -21,14 +22,24 @@
   },
   "homepage": "https://github.com/mhlabs/aws-sdk-sso#readme",
   "devDependencies": {
-    "@types/node": "^14.0.27"
+    "@types/jest": "^26.0.15",
+    "@types/node": "^14.14.3",
+    "@types/sha1": "^1.1.2",
+    "jest": "^26.6.1",
+    "ts-jest": "^26.4.3",
+    "typescript": "^4.0.3"
   },
   "dependencies": {
     "@aws-sdk/shared-ini-file-loader": "0.1.0-preview.1",
+    "esm": "^3.2.25",
     "open": "^7.1.0",
-    "sha1": "^1.1.1"
+    "sha1": "^1.1.1",
+    "ts-node": "^9.0.0"
   },
   "publishConfig": {
     "access": "public"
+  },
+  "peerDependencies": {
+    "aws-sdk": "^2.779.0"
   }
 }
