--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@mhlabs/aws-sdk-sso",
-  "version": "0.0.13",
+  "version": "0.0.14",
   "description": "Credentials provider for AWS Single Sign-On",
   "main": "index.js",
   "scripts": {
@@ -30,9 +30,7 @@
     "typescript": "^4.0.3"
   },
   "dependencies": {
-    "@aws-sdk/shared-ini-file-loader": "0.1.0-preview.1",
-    "open": "^7.1.0",
-    "sha1": "^1.1.1"
+    "@aws-sdk/shared-ini-file-loader": "0.1.0-preview.1"
   },
   "publishConfig": {
     "access": "public"
