--- a/package.json
+++ b/package.json
@@ -3,6 +3,7 @@
   "version": "0.0.12",
   "description": "Credentials provider for AWS Single Sign-On",
   "main": "index.js",
+  "types": "index.d.ts",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
   },
@@ -24,7 +25,7 @@
     "@types/node": "^14.0.27"
   },
   "dependencies": {
-    "@aws-sdk/shared-ini-file-loader": "0.1.0-preview.1",
+    "@aws-sdk/shared-ini-file-loader": "^3.4.1",
     "open": "^7.1.0",
     "sha1": "^1.1.1"
   },
