--- a/package.json
+++ b/package.json
@@ -4,6 +4,10 @@
   "description": "Credentials provider for AWS Single Sign-On",
   "main": "index.js",
   "types": "index.d.ts",
+  "files": [
+    "index.js",
+    "index.d.ts"
+  ],
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
   },
